--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
-spring.datasource.url=jdbc:h2:file:~/h2/testdb
+spring.datasource.url=jdbc:log4jdbc:h2:file:~/h2/testdb
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
-logging.config.claa
+# BATCH setting
+spring.batch.job.enabled=false
+spring.batch.initialize-schema=never
